--- a/.github/workflows/push-images.yml
+++ b/.github/workflows/push-images.yml
@@ -234,7 +234,7 @@ jobs:
 
       - name: Check if it is a tag build
         if: startsWith(github.ref, 'refs/tags/')
-        run: echo "TAG=${{ env.IMAGE_FULL_NAME }}:${GITHUB_REF##refs/tags/v}-jvm" >> $GITHUB_ENV
+        run: echo "TAG=${{ env.IMAGE_FULL_NAME }}:${GITHUB_REF##refs/tags/v}" >> $GITHUB_ENV
 
       - name: Create and push multi-arch native manifests (${{ matrix.tag }})
         shell: bash
