fix: Add Jackson core as an ignored unused declared dependency in pom.xml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/pom.xml
+++ b/pom.xml
@@ -574,6 +574,9 @@
                 <!-- JUnit -->
                 <ignoredUnusedDeclaredDependency>org.junit.platform:junit-platform-launcher</ignoredUnusedDeclaredDependency>
 
+                <!-- Jackson -->
+                <ignoredUnusedDeclaredDependency>com.fasterxml.jackson.core:jackson-core</ignoredUnusedDeclaredDependency>
+
                 <!-- Explicitly used but Maven misses it -->
                 <ignoredUnusedDeclaredDependency>jakarta.inject:jakarta.inject-api</ignoredUnusedDeclaredDependency>
               </ignoredUnusedDeclaredDependencies>
