--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -672,3 +673,4 @@
     </profile>
   </profiles>
 </project>
+
