--- a/pom.xml
+++ b/pom.xml
@@ -276,7 +276,7 @@
       <artifactId>microprofile-openapi-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>.quarkus.resteasy.reactive</groupId>
+      <groupId>io.quarkus.resteasy.reactive</groupId>
       <artifactId>resteasy-reactive-common</artifactId>
       <version>3.29.0</version>
     </dependency>
@@ -677,6 +677,7 @@
     </profile>
   </profiles>
 </project>
+
 
 
 
