feat: Refactor real-time updates from SSE to WebSocket
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-scheduler</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-websockets-next</artifactId>
+    </dependency>
 
     <!-- Quarkus Extensions -->
     <dependency>
