--- a/.github/workflows/push-images.yml
+++ b/.github/workflows/push-images.yml
@@ -52,11 +52,11 @@ jobs:
               (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || (github.event_name == 'workflow_run' && (github.event.workflow_run.event == 'push' || github.event.workflow_run.event == 'workflow_dispatch') && github.event.workflow_run.conclusion == 'success'))
             }}" >>$GITHUB_OUTPUT
 
-  build-native-images:
+  build-and-push-native-images:
     needs: init
     if: ${{ needs.init.outputs.run == 'true' }}
     runs-on: ubuntu-latest
-    name: "Build Native images"
+    name: "Build and Push Native images"
     steps:
       - uses: actions/checkout@v5
 
@@ -95,47 +95,6 @@ jobs:
         with:
           install: true
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          platforms: linux/amd64
-          push: false
-          load: true
-          file: ./src/main/docker/Dockerfile.native-micro
-          tags: ${{ steps.meta.outputs.tags }}
-
-      - name: Save native image to artifact
-        uses: ishworkh/container-image-artifact-upload@v2.0.2
-        with:
-          image: "${{ steps.meta.outputs.tags }}"
-          retention_days: 1
-
-  push-images:
-    needs:
-      - build-native-images
-    runs-on: ubuntu-latest
-    name: "Push images to registry"
-    steps:
-      - uses: actions/checkout@v5
-
-      - name: 📝 Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@c1e51972afc2121e065aed6d45c65596fe445f3f # v5.8.0
-        with:
-          images: ${{env.IMAGE_FULL_NAME}}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-          flavor: |
-            latest=auto
-
-      - name: Retrieve saved image from artifact
-        uses: ishworkh/container-image-artifact-download@v2.1.1
-        with:
-          image: "${{ steps.meta.outputs.tags }}"
-
       - name: 🔑 Log into registry ${{ env.REGISTRY }}
         uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
         with:
@@ -143,6 +102,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 📦 Push images to registry
-        working-directory: .
-        run: "docker push -a ${{ env.IMAGE_FULL_NAME }}"
+      - name: 📦 Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platforms: linux/amd64
+          push: true
+          file: ./src/main/docker/Dockerfile.native-micro
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
