--- a/.github/workflows/push-images.yml
+++ b/.github/workflows/push-images.yml
@@ -69,6 +69,8 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
           flavor: |
             latest=auto
 
