fix(workflow): refine concurrency group to include GitHub ref for unique workflow runs
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.github/workflows/push-images.yml
+++ b/.github/workflows/push-images.yml
@@ -27,9 +27,9 @@ permissions:
   contents: write
   packages: write
 
-# Only process one workflow run at a time
+# Only process one workflow run at a time per ref
 concurrency:
-  group: "${{ github.workflow }}"
+  group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: false
 
 jobs:
