--- a/src/main/webui/package.json
+++ b/src/main/webui/package.json
@@ -14,6 +14,7 @@
       "outputName": "js-junit.xml"
    },
    "dependencies": {
+      "@apollo/client": "^4.0.9",
       "@popperjs/core": "^2.11.8",
       "@preact/compat": "^18.0.0",
       "@rehooks/local-storage": "^2.4.5",
@@ -26,8 +27,7 @@
       "graphql-ws": "^5.16.2",
       "preact": "^10.22.0",
       "preact-i18n": "^2.4.0-preactx",
-      "react-responsive": "^10.0.0",
-      "urql": "^5.0.1"
+      "react-responsive": "^10.0.0"
    },
    "devDependencies": {
       "@babel/preset-env": "^7.28.0",
