--- a/.github/workflows/changelog/configuration.json
+++ b/.github/workflows/changelog/configuration.json
@@ -90,7 +90,9 @@
     },
     "template": "#{{CHANGELOG}}\n\n<details>\n<summary>Uncategorized</summary>\n\n#{{UNCATEGORIZED}}\n</details>",
     "pr_template": "- #{{TITLE}} by @#{{AUTHOR}} in ##{{NUMBER}}",
+    "commit_template": "- #{{TITLE}} by @#{{AUTHOR}} in #{{SHA}}",
     "empty_template": "- no changes",
+    "includeOpen": false,
     "trim_values": false,
     "max_tags_to_fetch": 200,
     "max_pull_requests": 200,
