- Changed the `urlTemplate` variable in StartpunktApplicationWrapper to be final for better immutability. - Added a new checkstyle suppressions file to manage specific checkstyle rules for the project. - Moved integration test classes under the v1alpha4 package to ensure compatibility with the latest application structure.
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/pom.xml
+++ b/pom.xml
@@ -367,6 +367,7 @@
         <version>3.6.0</version>
         <configuration>
           <configLocation>google_checks.xml</configLocation>
+          <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
           <consoleOutput>true</consoleOutput>
           <failsOnError>true</failsOnError>
           <linkXRef>false</linkXRef>
@@ -643,7 +644,7 @@
                 <requireJavaVersion>
                   <version>[21,22)</version>
                 </requireJavaVersion>
-                <dependencyConvergence />
+                <dependencyConvergence></dependencyConvergence>
               </rules>
               <fail>true</fail>
             </configuration>
@@ -656,8 +657,8 @@
         <version>3.0.0</version>
         <configuration>
           <java>
-            <googleJavaFormat />
-            <removeUnusedImports />
+            <googleJavaFormat></googleJavaFormat>
+            <removeUnusedImports></removeUnusedImports>
           </java>
         </configuration>
         <executions>
