fix(dev): update Java image version and enhance post-create script for OpenShift CLI installation
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Startpunkt Development Container",
-	"image": "mcr.microsoft.com/devcontainers/java:1-21-bullseye",
+	"image": "mcr.microsoft.com/devcontainers/java:1-21-bookworm",
 	
 	"features": {
 		"ghcr.io/devcontainers/features/node:1": {
