refactor: remove KubernetesWatchService and replace with Informers for resource watching
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -79,14 +79,15 @@ startpunkt:
     subscription:
       enabled: true  # If true, enable GraphQL subscriptions for real-time updates
 
-  # Kubernetes watch configuration
+  # Kubernetes watch configuration (using Informers)
   watch:
-    enabled: true  # If true, enable Kubernetes watches for real-time cache updates
-    # When enabled, the application will watch for changes in Kubernetes resources
+    enabled: true  # If true, enable Kubernetes informers for real-time cache updates
+    # When enabled, the application will use Kubernetes Informers to watch for changes
     # and update the cache automatically, triggering GraphQL subscription notifications
-    cacheRefreshIntervalMinutes: 5  # Periodic cache refresh interval in minutes (0 to disable)
-    # The periodic refresh catches any deleted objects that may have been missed by watches
-    # due to network issues or watch disconnections. Set to 0 to disable periodic refresh.
+    resyncPeriodSeconds: 300  # Informer resync period in seconds (300 = 5 minutes)
+    # Informers automatically resync with Kubernetes API server at this interval,
+    # ensuring cache consistency even if events are missed. This replaces the old
+    # manual periodic refresh mechanism.
 
 # Quarkus configuration
 quarkus:
